Bug 172223 - Mach-0 impl of nsLocalFile::Reveal() does not work because passing an FSRef in the Apple Event does not work - it must be an FSSpec. r=sdagley/sr=sfraser/a=dbaron